<resources>
    <string name="app_name">DriveNFC</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cancel">Cancel</string>
    <string name="ownerName">Owner Name</string>
    <string name="maker">Maker</string>
    <string name="company_name">Company Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="qr_code_scan">QR Code Scan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string-array name="ownerCompanies">
        <item>-select-</item>
        <item>Aker Solutions</item>
        <item>Bakery Hughes</item>
        <item>Chevron</item>
        <item>EMAS Energy Services</item>
        <item>Halliburton</item>
        <item>Mi/Swaco</item>
        <item>Mubadala</item>
        <item>NOV/Brandt</item>
        <item>Petronas</item>
        <item>PTT</item>
        <item>Sapura Energy</item>
        <item>Schlumberger</item>
        <item>Scentific Drilling</item>
        <item>Seadrill</item>
        <item>Shell</item>
        <item>Sodexo</item>
        <item>Transocean</item>
        <item>Weatherford</item>

    </string-array>
    <string-array name="inspectionCompany">
        <item>Dacon</item>
        <item>DJ Services</item>
        <item>DNV</item>
        <item>Intertek</item>
        <item>Lloyds Register</item>
        <item>Metalogic</item>
        <item>Pistc</item>
        <item>SGS</item>
        <item>SGT</item>
        <item>SureNDT</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="asset_code">Asset Code</string>
    <string name="serial_number">Serial Number</string>
    <string name="construction">Construction</string>
    <string name="rimDiameter">Rim\nDiameter (in)</string>
    <string name="wwl">WLL (MT)</string>
    <string name="size">d - Size(mm)</string>
    <string name="hole_diameter">Hole Diameter (mm)</string>
    <string name="jawWidth">W - Jaw (mm)</string>
    <string name="length">L - Length (mm)</string>
    <string name="pin_diameter">D - Pin Dia. (mm)</string>
    <string name="get_location">Get Location</string>
    <string name="weight_kgs">Weight (kgs)</string>
    <string name="bowWidth">B - Width (mm)</string>
    <string name="Latitude">Latitude (deg)</string>
    <string name="Longitude">Longitude (deg)</string>
    <string name="current_location">Current Location</string>
    <string name="valid">valid</string>
    <string name="expired">expired</string>
    <string name="certification">Certification</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="certification_status">Certification Status</string>
    <string name="scan">SCAN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="training_date">Training Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="training_facility">Training Facility</string>
    <string name="trainer_first_name">Trainer First Name</string>
    <string name="trainer_last_name">Trainer Last Name</string>
    <string name="url">URL</string>
    <string name="wp_psi">WP (psi)</string>
    <string name="service">Service</string>
    <string name="od_in">OD (in)</string>
    <string name="part_number">Part Number</string>
    <string name="length_ft">Length (ft)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="type">Type</string>
    <string name="map">MAP</string>
    <string name="lower_conn">Lower Conn</string>
    <string name="sheave_size_in">Sheave Size (in)</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="hydrogen_sulfide_safety">Hydrogen Sulfide Safety</string>
    <string name="training_certificate">Training Certificate</string>
    <string name="list">List</string>
    <string name="clear">Clear</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Alert Dialog</string>
    <string name="updateLocation_message">Your Location is more than 100 m from the last known Asset Location. \n\nUPDATE Asset Location to your CURRENT LOCATION?</string>
    <string name="updateLocation_title">Update Asset Location</string>
    <string name="od">OD</string>
    <string name="mgw_kg">MGW (kg)</string>
    <string name="tare_kg">Tare (kg)</string>
    <string name="waist_belt_cm">Waist Belt (cm)</string>
    <string name="leg_loops_cm">Leg Loops (cm)</string>
    <string name="user_height_cm">User Height (cm)</string>
    <string name="certification_date">Certification Date</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="assetCreateHelp_text">
        "Create New Asset.\n\n"

        "ASSET CODE - Type the Asset Code for the equipment based on the owner's Asset Coding nomenclature.\n"
        "SERIAL NUMBER - Numbers and Letters are acceptable. \n"
        "CERTIFICATION DATE - Date the test was completed (dd/mm/yyyy). \n"
        "EXPIRY DATE - Depending on the length of validity of the test (dd/mm/yyyy). \n "
        "OWNER - Asset Owner. \n"
        "MAKER - Maker or Builder of Asset. \n "
        "MGW - Maximum Gross Weight. (kg). The maximum allowed total weight (Container and contents) . \n"
        "TARE - Weight of the container (empty) (kg) \n"
        "WAIST BELT - In Harnesses, this is the range of adjustment for the waist (cm). \n"
        "LEG LOOPS - In Harnesses, this is the range of adjustment for the leg loops (cm). \n"
        "USER HEIGHT - In Harnesses, this is the range of user heights that can use this product (cm). \n"
        "WLL - Maximum Load Limit (kg). \n
        "WP - Working Pressure (psi) \n
        "ID" - Inner Diameter (inch) \n
        "OD" - Outer Diameter (inch) \n
        "LENGTH - (m) \n"
        "WIDTH - (m) \n"
        "HEIGHT - (m) \n"
        "LATITUDE - In Degrees \n"
        "LONGITUDE - In Degrees \n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="username">Username</string>
    <string name="imageurl">imageURL</string>
    <string name="length_m">Length (m)</string>
    <string name="width_m">Width (m)</string>
</resources>