<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShackleCreateActivity">
    <item
        android:id="@+id/menu_donebutton"
        android:title="@string/done"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_createShackle"
        android:title="@string/create"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
</menu>



